# bb2-building

./: .editorconfig  .gitignore  Cargo.toml  Dioxus.toml  README.md  Trunk.toml  esbuild.mjs  index.html  input.css  package-lock.json  package.json  tailwind.config.js
.cargo/: config.toml
.github/workflows/: deploy.yml
data/: Cargo.toml
data/src/: database.rs  global.rs  lib.rs  rune.rs  search.rs  skill.rs  sprite.rs  state.rs  term.rs  token.rs
public/: input.css  skill.avro
public/data/: skill.avro  state.avro
public/i18n/de/: database.msgpack  skill.msgpack  term.avro  term.msgpack  terms.avro
public/i18n/en/: database.msgpack  skill.msgpack  term.avro  term.msgpack  terms.avro
public/i18n/es/: database.msgpack  skill.msgpack  term.avro  term.msgpack  terms.avro
public/i18n/fr/: database.msgpack  skill.msgpack  term.avro  term.msgpack  terms.avro
public/i18n/it/: database.msgpack  skill.msgpack  term.avro  term.msgpack  terms.avro
public/i18n/ja/: database.msgpack  skill.msgpack  term.avro  term.msgpack  terms.avro
public/i18n/ko/: database.msgpack  skill.msgpack  term.avro  term.msgpack  terms.avro
public/i18n/pt/: database.msgpack  skill.msgpack  term.avro  term.msgpack  terms.avro
public/i18n/pt-BR/: database.msgpack  skill.msgpack  term.avro  term.msgpack  terms.avro
public/i18n/ru/: database.msgpack  skill.msgpack  term.avro  term.msgpack  terms.avro
public/i18n/zh-CN/: database.msgpack  skill.msgpack  term.avro  term.msgpack  terms.avro
public/i18n/zh-TW/: database.msgpack  global.msgpack  skill.msgpack  term.avro  term.msgpack  terms.avro
sandbox/: Cargo.toml
sandbox/src/: main.rs
src/: app.rs  atoms.rs  auth0.rs  bundle.js  components.rs  editor.rs  global.rs  hooks.rs  lib.rs  main.rs  package.mjs  pages.rs  search.rs  tokenizer.js  ui.rs  worker.rs
src/components/: app.rs  example.rs  footer.rs  icon.rs  nav_bar.rs  rarity.rs  rune.rs  skill.rs  skill_view.rs  sprite.rs  tabs.rs
src/hooks/: mod.rs  modal.rs  persistent.rs  search_index.rs  search_rune.rs  search_skill.rs
src/pages/: home.rs  mod.rs  rune.rs  skill.rs
src/pages/planner/: edit.rs  mod.rs  planner.rs
src/pages/rune/: debug.rs  list.rs  mod.rs  view.rs
src/pages/skill/: debug.rs  list.rs  search.rs  view.rs
src/ui/: description.rs  dialog.rs  icon.rs  mod.rs  rarity.rs  sprite.rs
src4/: atoms.rs  components.rs  hooks.rs  pages.rs
src4/components/: nav_bar.rs  rarity.rs  rune_view.rs  skill_view.rs
src4/hooks/: modal.rs
src4/pages/: home.rs  planner.rs
src4/pages/planner/: planner.rs
src4/pages/rune/: list.rs
src4/pages/skill/: view.rs
