[workspace]
members = ["gen", "sandbox"]

[package]
name = "web"
version = "0.1.0"
edition = "2021"

[dependencies]
data = { path = "./data" }
dioxus-headlessui = { git = "https://github.com/atty303/dioxus-headlessui.git" }

dioxus = { git = "https://github.com/DioxusLabs/dioxus.git", rev = "e767e49d5e79ae2960d16883fdb2b67eda00d206", features = ["router", "web"] }
dioxus-signals = { git = "https://github.com/DioxusLabs/dioxus.git", rev = "e767e49d5e79ae2960d16883fdb2b67eda00d206", features = ["serde"] }

wasm-bindgen = "0.2"
web-sys = { version = "0.3", features = ["Window", "History", "Location", "HtmlDialogElement", "DomRect"] }
gloo-utils = "0.2"
gloo-storage = "0.3"

tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-web = "0.1"

reqwest = "0.11"

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rmp-serde = "1.1"
base64 = "0.21"

indicium = { git = "https://github.com/atty303/indicium.git", rev = "a3c8c168e0c4f9167612b80eda194b2a179e5338" }
getrandom = { version = "0.2", features = ["js"] }

anyhow = "1.0"
ref-cast = "1.0"
