[workspace]
resolver = "2"
members = ["packages/app", "packages/data", "packages/gen", "packages/web", "sandbox"]

[patch.crates-io]
worker = { git = "https://github.com/spigaz/workers-rs.git", rev = "7bbd74efeda63852369a0725d6e45a006301a93e" }

[workspace.package]
version = "0.1.0"

[workspace.dependencies]
app = { path = "packages/app" }
data = { path = "packages/data" }

dioxus = { git = "https://github.com/DioxusLabs/dioxus.git", rev = "902d6e2fd7b3192f2cf8b28438ab0df4bd590ddc", features = ["router", "web"] }
